<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/garageFragment"
        android:icon="@drawable/ic_nav_garage"
        android:title="@string/nav_garage" />
    <item
        android:id="@+id/logsFragment"
        android:icon="@drawable/ic_nav_logs"
        android:title="@string/nav_logs" />
    <item
        android:id="@+id/gloveboxFragment"
        android:icon="@drawable/ic_nav_glovebox"
        android:title="@string/nav_glovebox" />
    <item
        android:id="@+id/parkingFragment"
        android:icon="@drawable/ic_parking"
        android:title="@string/nav_parking" />
    <item
        android:id="@+id/ekdromesFragment"
        android:icon="@drawable/ic_nav_ekdromes"
        android:title="@string/nav_ekdromes" />
</menu>
